# openfire_sync

./: Dockerfile  analysys.ipynb  app.py  config_example.py  docker-compose.yml  openfire.py  openfire_sync.py  pyproject.toml  requirements.txt
